# RadioApp

./: .gitee-ci.yml  README.md  build.gradle  download-apk.sh  gitee-build.sh  gradle.properties  gradlew  settings.gradle
.github/workflows/: build-fasthub.yml  build.yml
.workflow/: branch-pipeline.yml  master-pipeline.yml  pipeline-20260618.yml
app/: build.gradle  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ggml-cpu.h  ggml.h  mnn_llm_jni.cpp  whisper.h  whisper_jni.c
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: bg_card.xml  bg_circle.xml  bg_live_indicator.xml  bg_play_button.xml  bg_search.xml  ic_calendar.xml  ic_close.xml  ic_forward.xml  ic_home.xml  ic_manual_dry.xml  ic_manual_water.xml  ic_next.xml  ic_notification.xml  ic_pause.xml  ic_play.xml  ic_prev.xml  ic_radio.xml  ic_rewind.xml  ic_search.xml  ic_settings.xml  ic_skip_backward.xml  ic_skip_forward.xml  notif_next.xml  notif_play.xml  notif_prev.xml  notification_progress_drawable.xml  seekbar_cache_progress.xml  seekbar_progress.xml  seekbar_thumb.xml
app/src/main/res/layout/: activity_disliked_episodes.xml  activity_keyword_settings.xml  activity_main.xml  activity_offline_engine.xml  activity_player.xml  fragment_episodes.xml  fragment_home.xml  fragment_search.xml  fragment_settings.xml  item_disliked_episode.xml  item_engine_card.xml  item_episode.xml  item_keyword_chip.xml  item_search_result.xml  item_station.xml  item_voice_segment.xml  notification_compact.xml  notification_custom.xml  notification_media_expanded.xml  notification_minimal.xml  notification_segment.xml  view_subtitle.xml  view_title_bar.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  themes.xml  (+1 more)
build_logs/: 0_build.txt
gradle/wrapper/: README.md  gradle-wrapper.properties
releases/: apk-info.txt
(+73 files in other folders)
